--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,13 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.23.1</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -191,6 +198,12 @@
 					<version>0.8.8</version>
 					<configuration>
 						<output>file</output>
+						<excludes>
+							<exclude>**/*BookingMapperImpl.*</exclude>
+							<exclude>**/*ItemMapperImpl.*</exclude>
+							<exclude>**/*ItemRequestMapperImpl.*</exclude>
+							<exclude>**/*UserMapperImpl.*</exclude>
+						</excludes>
 					</configuration>
 					<executions>
 						<execution>
@@ -205,6 +218,12 @@
 								<goal>check</goal>
 							</goals>
 							<configuration>
+								<excludes>
+									<exclude>**/*BookingMapperImpl.*</exclude>
+									<exclude>**/*ItemMapperImpl.*</exclude>
+									<exclude>**/*ItemRequestMapperImpl.*</exclude>
+									<exclude>**/*UserMapperImpl.*</exclude>
+								</excludes>
 								<rules>
 									<rule>
 										<element>BUNDLE</element>
@@ -318,5 +337,4 @@
 			</build>
 		</profile>
 	</profiles>
-
 </project>
